app으로 디자인 이동

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Cream Shop Management</title>
+    <title>아이스크림 가게 관리</title>
     <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="/inventory/">Inventory</a>
-            <a href="/order/">Orders</a>
+            <a href="/">홈</a>
+            <a href="/order">주문</a>
+            <a href="/stock">재고</a>
+            <a href="/history">내역</a>
         </nav>
     </header>
     <main class="container">
