--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "header.html" %}
 
 {% block content %}
-<h1>아이스크림 가게에 오신 것을 환영합니다</h1>
+<h1>튀르키예~즈?</h1>
 <img src="{{ url_for('static', path='/images/character.jpg') }}" alt="튀르키예~즈?">
 {% endblock %}
