item 추가 페이지 생성

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <a href="/">홈</a>
+            <a href="/item">추가</a>
             <a href="/order">주문</a>
             <a href="/stock">재고</a>
             <a href="/history">내역</a>
