--- a/app/resource/templates/header.html
+++ b/app/resource/templates/header.html
@@ -14,6 +14,7 @@
             <a href="/order">주문</a>
             <a href="/stock">재고</a>
             <a href="/history">내역</a>
+            <a href="/sales">매출</a>            
             <a href="/log">로그</a>
         </nav>
     </header>
