배경 이미지 및 동적 효과 추가

--- a/app/resource/templates/index.html
+++ b/app/resource/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "header.html" %}
 
 {% block content %}
-<h1>튀르키예~즈?</h1>
-<img src="{{ url_for('static', path='/images/character.jpg') }}" alt="튀르키예~즈?">
+<div class="background-container">
+    <img src="/static/images/character_1.png" alt="HI5ER" class="character-img" id="character-image">
+</div>
+<script src="/static/scripts/characterRotation.js"></script>
 {% endblock %}
