--- a/app/resource/templates/log.html
+++ b/app/resource/templates/log.html
@@ -4,24 +4,26 @@
 <h2>로봇 로그</h2>
 
 {% if logs %}
-<table>
-    <thead>
-        <tr>
-            <th>로그 ID</th>
-            <th>상태</th>
-            <th>시간</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for log in logs %}
-        <tr>
-            <td>{{ log.id }}</td>
-            <td>{{ log.status }}</td>
-            <td>{{ log.log_time }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="table-container">
+    <table>
+        <thead>
+            <tr>
+                <th>로그 ID</th>
+                <th>상태</th>
+                <th>시간</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for log in logs %}
+            <tr>
+                <td>{{ log.id }}</td>
+                <td>{{ log.status }}</td>
+                <td>{{ log.log_time }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% else %}
 <p>로그가 없습니다.</p>
 {% endif %}
