--- a/app/resource/templates/header.html
+++ b/app/resource/templates/header.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아이스크림 가게 관리</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/header.css">
+    {% block head %}{% endblock %}
 </head>
 <body>
     <header>
