스타일 수정: 홈화면 분할
ref : 4029c2972364f0ab8ffb24f61ce2f5c9e80717f0

--- a/app/resource/templates/index.html
+++ b/app/resource/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "header.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/css/index.css">
+{% endblock %}
+
 {% block content %}
 <div class="background-container">
     <img src="/static/images/character_1.png" alt="HI5ER" class="character-img" id="character-image">
