--- a/app/resource/templates/order.html
+++ b/app/resource/templates/order.html
@@ -1,5 +1,8 @@
 {% extends "header.html" %}
-
+{% block head %}
+<link rel="stylesheet" href="/static/css/common.css">
+<link rel="stylesheet" href="/static/css/order.css">
+{% endblock %}
 {% block content %}
 <h2>주문</h2>
 <div class="order-container">
