스타일 수정: 재고 화면 분할
ref : 4029c2972364f0ab8ffb24f61ce2f5c9e80717f0

--- a/app/resource/templates/stock.html
+++ b/app/resource/templates/stock.html
@@ -1,33 +1,69 @@
 {% extends "header.html" %}
-
+{% block head %}
+<link rel="stylesheet" href="/static/css/common.css">
+<link rel="stylesheet" href="/static/css/stock.css">
+{% endblock %}
 {% block content %}
 <h2>재고</h2>
 <div class="inventory-container">
     <div class="inventory-category">
         <h3>아이스크림</h3>
-        <ul class="inventory-list">
-            {% for name, quantity in inventory_data['ice_cream'].items() %}
-            <li>{{ name }}: {{ quantity }}개</li>
-            {% endfor %}
-        </ul>
+        <table class="inventory-table">
+            <thead>
+                <tr>
+                    <th>이름</th>
+                    <th>수량</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for name, quantity in inventory_data['ice_cream'].items() %}
+                <tr>
+                    <td>{{ name }}</td>
+                    <td>{{ quantity }}개</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 
     <div class="inventory-category">
         <h3>토핑</h3>
-        <ul class="inventory-list">
-            {% for name, quantity in inventory_data['topping'].items() %}
-            <li>{{ name }}: {{ quantity }}개</li>
-            {% endfor %}
-        </ul>
+        <table class="inventory-table">
+            <thead>
+                <tr>
+                    <th>이름</th>
+                    <th>수량</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for name, quantity in inventory_data['topping'].items() %}
+                <tr>
+                    <td>{{ name }}</td>
+                    <td>{{ quantity }}개</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 
     <div class="inventory-category">
         <h3>소모품</h3>
-        <ul class="inventory-list">
-            {% for name, quantity in inventory_data['consumable'].items() %}
-            <li>{{ name }}: {{ quantity }}개</li>
-            {% endfor %}
-        </ul>
+        <table class="inventory-table">
+            <thead>
+                <tr>
+                    <th>이름</th>
+                    <th>수량</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for name, quantity in inventory_data['consumable'].items() %}
+                <tr>
+                    <td>{{ name }}</td>
+                    <td>{{ quantity }}개</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock %}
