--- a/app/resource/templates/history.html
+++ b/app/resource/templates/history.html
@@ -1,5 +1,10 @@
 {% extends "header.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/css/common.css">
+<link rel="stylesheet" href="/static/css/history.css">
+{% endblock %}
+
 {% block content %}
 <h2>내역</h2>
 <div class="table-container">
