스타일 수정: 매출 화면 분할
ref : 4029c2972364f0ab8ffb24f61ce2f5c9e80717f0

--- a/app/resource/templates/sales.html
+++ b/app/resource/templates/sales.html
@@ -1,5 +1,10 @@
 {% extends "header.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/css/common.css">
+<link rel="stylesheet" href="/static/css/sales.css">
+{% endblock %}
+
 {% block content %}
 <h2>매출량</h2>
 <div class="sales-container">
