스타일 수정: 로그 화면 분할
ref : 4029c2972364f0ab8ffb24f61ce2f5c9e80717f0

--- a/app/resource/templates/log.html
+++ b/app/resource/templates/log.html
@@ -1,11 +1,14 @@
 {% extends "header.html" %}
-
+{% block head %}
+<link rel="stylesheet" href="/static/css/common.css">
+<link rel="stylesheet" href="/static/css/log.css">
+{% endblock %}
 {% block content %}
 <h2>로봇 로그</h2>
 
 {% if logs %}
 <div class="table-container">
-    <table>
+    <table class="log-table">
         <thead>
             <tr>
                 <th>로그 ID</th>
