스타일 수정: 내역 테이블 정상화

--- a/app/resource/templates/history.html
+++ b/app/resource/templates/history.html
@@ -8,7 +8,7 @@
 {% block content %}
 <h2>내역</h2>
 <div class="table-container">
-    <table>
+    <table class="history-table">
         <thead>
             <tr>
                 <th>ID</th>
