--- a/app/resource/templates/navbar.html
+++ b/app/resource/templates/navbar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아이스크림 가게 관리</title>
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/header.css">
+    <link rel="stylesheet" href="/static/css/navbar.css">
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -20,6 +20,11 @@
                 <a href="/history">내역</a>
                 <a href="/sales">매출</a>
                 <a href="/log">로그</a>
+                {% if request.cookies.get('access-token') %}
+                <a href="/logout">로그아웃</a>
+                {% else %}
+                <a href="/login">로그인</a>
+                {% endif %}
             </div>
         </nav>
     </header>
