--- a/app/resource/static/css/login.css
+++ b/app/resource/static/css/login.css
@@ -1,3 +1,4 @@
+/* static/css/login.css */
 .login-container {
     max-width: 400px;
     margin: 50px auto;
@@ -6,6 +7,10 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* 중앙 정렬 */
+    box-sizing: border-box;
 }
 
 .login-container h2 {
@@ -16,6 +21,7 @@
 .login-container label {
     display: block;
     margin-bottom: 8px;
+    width: 100%; /* 전체 너비 */
 }
 
 .login-container input {
@@ -24,6 +30,8 @@
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-sizing: border-box; /* box-sizing 속성 추가 */
+    text-align: center; /* 텍스트 중앙 정렬 */
 }
 
 .login-container button {
@@ -34,6 +42,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-sizing: border-box; /* box-sizing 속성 추가 */
 }
 
 .login-container button:hover {
