--- a/app/resource/templates/login.html
+++ b/app/resource/templates/login.html
@@ -8,10 +8,12 @@
 <div class="login-container">
     <h2>로그인</h2>
     <form action="/auth/token" method="post">
-        <label for="username">사용자 이름:</label>
+        <label for="username">사용자 이름</label>
         <input type="text" id="username" name="username" required>
-        <label for="password">비밀번호:</label>
+
+        <label for="password">비밀번호</label>
         <input type="password" id="password" name="password" required>
+
         <button type="submit">로그인</button>
     </form>
 </div>
