스타일 수정: 테이블 제목행

--- a/app/resource/templates/history.html
+++ b/app/resource/templates/history.html
@@ -11,7 +11,7 @@
     <table class="history-table">
         <thead>
             <tr>
-                <th>ID</th>
+                <th>주문번호</th>
                 <th>아이스크림</th>
                 <th>토핑</th>
                 <th>소모품</th>
