--- a/app/resource/templates/navbar.html
+++ b/app/resource/templates/navbar.html
@@ -22,6 +22,7 @@
                 <a href="/sales" id="sales-link" style="display: none;">매출</a>
                 <a href="/log" id="log-link" style="display: none;">로그</a>
                 <a href="/camera" id="camera-link" style="display: none;">카메라</a>
+                <a href="/tables" id="table-link" style="display: none;">테이블</a>
                 <!-- 로그인/로그아웃 영역 -->
                 <a href="/login" id="login-link">로그인</a>
                 <a href="/logout" id="logout-link" style="display: none;">로그아웃</a>
@@ -52,6 +53,7 @@
                     document.getElementById('sales-link').style.display = 'block';
                     document.getElementById('log-link').style.display = 'block';
                     document.getElementById('camera-link').style.display = 'block';
+                    document.getElementById('table-link').style.display = 'block';
                 } else {
                     document.getElementById('order-link').style.display = 'block';
                 }
