Add : 스토리지 스타일 추가
ref : 71b3a6ce2e7bbe82c6ab21011617bef96e23f3ec

--- a/app/resource/templates/navbar.html
+++ b/app/resource/templates/navbar.html
@@ -23,6 +23,7 @@
                 <a href="/log" id="log-link" style="display: none;">로그</a>
                 <a href="/camera" id="camera-link" style="display: none;">카메라</a>
                 <a href="/tables" id="table-link" style="display: none;">테이블</a>
+                <a href="/storagy" id="storagy-link" style="display: none;">스토리지</a>
                 <!-- 로그인/로그아웃 영역 -->
                 <a href="/login" id="login-link">로그인</a>
                 <a href="/logout" id="logout-link" style="display: none;">로그아웃</a>
@@ -54,6 +55,7 @@
                     document.getElementById('log-link').style.display = 'block';
                     document.getElementById('camera-link').style.display = 'block';
                     document.getElementById('table-link').style.display = 'block';
+                    document.getElementById('storagy-link').style.display = 'block';
                 } else {
                     document.getElementById('order-link').style.display = 'block';
                 }
