Mod : 스토리지 맵 이미지 추가

--- a/app/resource/templates/storagy.html
+++ b/app/resource/templates/storagy.html
@@ -7,6 +7,9 @@
 
 {% block content %}
 <h2>스토리지</h2>
+<div class="background-container">
+    <img src="/static/images/map.png" alt="map">
+</div>
 <div class="storagy-container">
     <!-- 버튼 상태를 관리하는 span 태그 추가 -->
     <span id="buttonState" data-state="start">
