--- a/app/resource/static/css/storagy.css
+++ b/app/resource/static/css/storagy.css
@@ -1,10 +1,23 @@
+.background-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 80%; /* 양쪽에 10%씩 마진을 줌 */
+    max-width: 748px; /* 기본 이미지 크기 */
+}
+
+.background-container img {
+    width: 100%; /* 컨테이너의 너비에 맞춰 이미지를 조정 */
+    height: auto; /* 이미지의 비율을 유지하면서 높이 조정 */
+}
+
 /* static/css/storagy.css */
 .storagy-container {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
-    height: 100vh;
 }
 
 #toggleButton {
